added additional checks for (d)encrypt algo

--- a/Project Babel/Project Babel.vcxproj.filters
+++ b/Project Babel/Project Babel.vcxproj.filters
@@ -37,5 +37,8 @@
     <Text Include="Book.txt">
       <Filter>Books</Filter>
     </Text>
+    <Text Include="Descriptions.txt">
+      <Filter>Resource Files</Filter>
+    </Text>
   </ItemGroup>
 </Project>
